force-app/main/default/objects/Quittance__c/Quittance__c.object-meta.xml
<CustomObject>
    <description>Objet pour gérer les quittances</description>
    <label>Quittance</label>
    <nameField>
        <displayFormat>QUIT-{0000}</displayFormat>
        <label>Numéro de quittance</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quittances</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>