force-app/main/default/objects/Quittance__c/fields/Date_Envoi__c.field-meta.xml
<CustomField>
    <fullName>Date_Envoi__c</fullName>
    <label>Date Envoi</label>
    <type>DateTime</type>
</CustomField>