force-app/main/default/objects/Quittance__c/fields/Date_Envoi_Email__c.field-meta.xml
<CustomField>
    <fullName>Date_Envoi_Email__c</fullName>
    <label>Date Envoi Email</label>
    <type>DateTime</type>
</CustomField>