force-app/main/default/objects/Quittance__c/fields/Date_Generation__c.field-meta.xml
<CustomField>
    <fullName>Date_Generation__c</fullName>
    <label>Date Generation</label>
    <type>Date</type>
</CustomField>