force-app/main/default/objects/Quittance__c/fields/Email_Destinataire__c.field-meta.xml
<CustomField>
    <fullName>Email_Destinataire__c</fullName>
    <label>Email Destinataire</label>
    <type>Email</type>
</CustomField>