force-app/main/default/objects/Quittance__c/fields/Envoyee__c.field-meta.xml
<CustomField>
    <fullName>Envoyee__c</fullName>
    <label>Envoyée</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>