force-app/main/default/objects/Quittance__c/fields/Envoyee_Par_Email__c.field-meta.xml
<CustomField>
    <fullName>Envoyee_Par_Email__c</fullName>
    <label>Envoyée Par Email</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>