force-app/main/default/objects/Quittance__c/fields/Fichier_PDF__c.field-meta.xml
<CustomField>
    <fullName>Fichier_PDF__c</fullName>
    <label>Fichier PDF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>