force-app/main/default/objects/Quittance__c/fields/Locataire__c.field-meta.xml
<CustomField>
    <fullName>Locataire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Locataire associé à la quittance</description>
    <label>Locataire</label>
    <referenceTo>Locataire__c</referenceTo>
    <relationshipLabel>Quittances</relationshipLabel>
    <relationshipName>Quittances</relationshipName>
    <type>Lookup</type>
</CustomField>