force-app/main/default/objects/Quittance__c/fields/Montant_Total__c.field-meta.xml
<CustomField>
    <fullName>Montant_Total__c</fullName>
    <label>Montant Total</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>