force-app/main/default/objects/Quittance__c/fields/Paiement__c.field-meta.xml
<CustomField>
    <fullName>Paiement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Paiement associé à la quittance</description>
    <label>Paiement</label>
    <referenceTo>Paiement__c</referenceTo>
    <relationshipLabel>Quittances</relationshipLabel>
    <relationshipName>Quittances</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>