force-app/main/default/objects/Quittance__c/fields/Periode_Fin__c.field-meta.xml
<CustomField>
    <fullName>Periode_Fin__c</fullName>
    <label>Période Fin</label>
    <type>Date</type>
</CustomField>