force-app/main/default/objects/Quittance__c/fields/Statut_Envoi__c.field-meta.xml
<CustomField>
    <fullName>Statut_Envoi__c</fullName>
    <label>Statut Envoi</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non envoyée</fullName>
                <default>true</default>
                <label>Non envoyée</label>
            </value>
            <value>
                <fullName>Envoyée par email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>